--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ZATE | Uma inovação no mundo da roupa</title>
+<title>ZATE | Moda Verão</title>
 <style>
   /* Reset */
   * {
@@ -426,57 +426,59 @@
   const products = [
     {
       id: 1,
-      name: "Vestido",
+      name: "Vestido Floral",
       description: "Vestido leve e confortável, perfeito para o verão.",
       price: 59.99,
-      image: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pronovias.com%2Fpt%2Fvestidos-festa%2Fballgown&psig=AOvVaw2XBJtwdknP3JNPAFnjlqcq&ust=1748605836556000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPDC-M_OyI0DFQAAAAAdAAAAABAE"
+      image: "https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=400&q=80"
+    },
+    {
       id: 2,
-      name: "Camisa",
+      name: "Camisa Casual",
       description: "Camisa masculina casual em algodão de alta qualidade.",
       price: 39.90,
-      image: "https://assets.timberland.eu/images/t_img/f_auto,h_650,w_650,e_sharpen:60/dpr_2.0/v1702446147/TB0A6GRH433-ALT5/LongSleeve-Stretch-Poplin-Shirt-for-Men-in-Dark-Blue.png"
+      image: "https://images.unsplash.com/photo-1521334884684-d80222895322?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 3,
-      name: "Calça de ganga",
+      name: "Calça Jeans",
       description: "Calça jeans clássica com corte moderno e confortável.",
       price: 49.50,
-      image: "https://www.google.com/imgres?q=cal%C3%A7as&imgurl=https%3A%2F%2Fimages.napali.app%2Fglobal%2Fquiksilver-products%2Fall%2Fdefault%2Fxlarge%2Feqydp03462_quiksilver%2Cf_bhl0_frt1.jpg&imgrefurl=https%3A%2F%2Fwww.quiksilver.pt%2Fbaggy-nineties-wash---calcas-de-ganga-para-homem-EQYDP03462.html&docid=aoc8FyFYLkhYgM&tbnid=d1ulx4VX1tOAGM&vet=12ahUKEwj4_uKBz8iNAxW59AIHHWbON1AQM3oECBoQAA..i&w=600&h=800&hcb=2&ved=2ahUKEwj4_uKBz8iNAxW59AIHHWbON1AQM3oECBoQAA"
+      image: "https://images.unsplash.com/photo-1495121605193-b116b5b9c13f?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 4,
-      name: "Tênis",
+      name: "Tênis Esportivo",
       description: "Tênis leve e resistente, ideal para atividades físicas.",
       price: 69.99,
-      image: "https://www.google.com/imgres?q=tenis&imgurl=https%3A%2F%2Fimgnike-a.akamaihd.net%2F1300x1300%2F027284IMA8.jpg&imgrefurl=https%3A%2F%2Fwww.nike.com.br%2Ftenis-nike-revolution-7-feminino-027284.html&docid=B_q0Q9-o1hu7CM&tbnid=2tMqW4W77oeatM&vet=12ahUKEwjP282Nz8iNAxUV1wIHHS5qD54QM3oECGQQAA..i&w=1300&h=1300&hcb=2&ved=2ahUKEwjP282Nz8iNAxUV1wIHHS5qD54QM3oECGQQAA"
+      image: "https://images.unsplash.com/photo-1508051123996-69f8caf4891b?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 5,
-      name: "Blusão",
+      name: "Blusa de Frio",
       description: "Blusa de frio com tecido macio e quentinho para o inverno.",
       price: 44.95,
-      image: "https://www.google.com/imgres?q=blusao&imgurl=https%3A%2F%2Flabrador.pt%2Fcdn%2Fshop%2Ffiles%2FDSC07272_98e87105-2dad-4920-928a-4eba42cb096d.jpg%3Fv%3D1731946123%26width%3D1867&imgrefurl=https%3A%2F%2Flabrador.pt%2Fproducts%2Fblusao-bomber-em-pele-castanho-escuro&docid=pObvQhMe4MW5fM&tbnid=COLlgh3jOmDL4M&vet=12ahUKEwjkn--Zz8iNAxWw9gIHHfnUBnIQM3oECGMQAA..i&w=1867&h=2800&hcb=2&ved=2ahUKEwjkn--Zz8iNAxWw9gIHHfnUBnIQM3oECGMQAA"
+      image: "https://images.unsplash.com/photo-1520975693243-57f9b28bbf2e?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 6,
-      name: "Saia",
+      name: "Saia Midi",
       description: "Saia midi elegante para diversas ocasiões.",
       price: 35.90,
-      image: "https://www.google.com/imgres?q=saia&imgurl=https%3A%2F%2Fmaufeitio.pt%2Fonlineshop%2F155758-large_default%2Fobject-saia-paige-black.jpg&imgrefurl=https%3A%2F%2Fmaufeitio.pt%2Fonlineshop%2Fpt%2Fsaias%2F40452-object-saia-paige-black.html&docid=_KQxm6d_5hONUM&tbnid=mEwRJr3iXQlogM&vet=12ahUKEwjkisClz8iNAxUu-gIHHZYcJP4QM3oECBkQAA..i&w=600&h=600&hcb=2&ved=2ahUKEwjkisClz8iNAxUu-gIHHZYcJP4QM3oECBkQAA"
+      image: "https://images.unsplash.com/photo-1504595403659-9088ce801e29?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 7,
-      name: "Jaqueta",
+      name: "Jaqueta Jeans",
       description: "Jaqueta jeans estilosa e resistente para o dia a dia.",
       price: 74.00,
-      image: "https://www.google.com/imgres?q=jaqueta&imgurl=https%3A%2F%2Fimages.tcdn.com.br%2Fimg%2Fimg_prod%2F698738%2Fcopia_jaqueta_masculina_puffer_nylon_preta_747_1_378b31a1d36e3a94d141494c066d7f39.jpg&imgrefurl=https%3A%2F%2Fwww.lavandaealecrim.com.br%2Froupa-masculina%2Fjaquetas%2Fcopia-jaqueta-masculina-puffer-nylon-preta&docid=VGqSeM9VlFScEM&tbnid=pJGm6cXyy8sNQM&vet=12ahUKEwiEn5Cuz8iNAxU62AIHHaSrLRAQM3oFCIYBEAA..i&w=1100&h=1375&hcb=2&ved=2ahUKEwiEn5Cuz8iNAxU62AIHHaSrLRAQM3oFCIYBEAA"
+      image: "https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=400&q=80"
     },
     {
       id: 8,
-      name: "Chapéu",
+      name: "Chapéu Panamá",
       description: "Chapéu clássico para proteger do sol com estilo.",
       price: 25.00,
-      image: "https://www.google.com/imgres?q=chapeu&imgurl=https%3A%2F%2Fwww.artipistilos.com%2F22976-superlarge_default%2Fchapeu-de-feltro-nages-100-la.jpg&imgrefurl=https%3A%2F%2Fwww.artipistilos.com%2Fpt%2Fsombreros-de-fieltro-de-caballero%2F6621-chapeu-de-feltro-nages-100-la.html&docid=vxtfcb_zRt8YRM&tbnid=2vR1s0__9yEWmM&vet=12ahUKEwjehMi4z8iNAxVa-AIHHWD8OIEQM3oECEkQAA..i&w=1200&h=1372&hcb=2&ved=2ahUKEwjehMi4z8iNAxVa-AIHHWD8OIEQM3oECEkQAA"
+      image: "https://images.unsplash.com/photo-1491553895911-0055eca6402d?auto=format&fit=crop&w=400&q=80"
     }
   ];
 
@@ -505,9 +507,9 @@
       card.classList.add('product-card');
       card.setAttribute('tabindex', '0');
       card.setAttribute('role', 'button');
-      card.setAttribute('aria-label', `Visualizar detalhes do produto ${product.name}`);
+      card.setAttribute('aria-label', Visualizar detalhes do produto ${product.name});
 
-      card.innerHTML = `
+      card.innerHTML = 
         <img src="${product.image}" alt="${product.name}" />
         <div class="product-info">
           <h3>${product.name}</h3>
@@ -515,7 +517,7 @@
           <div class="price">€${product.price.toFixed(2)}</div>
           <button class="btn-add" aria-label="Adicionar ${product.name} ao carrinho">Comprar</button>
         </div>
-      `;
+      ;
 
       // Clique na imagem ou no card para abrir modal com detalhes
       card.querySelector('img').addEventListener('click', () => openModal(product));
@@ -546,7 +548,7 @@
     modalImage.alt = product.name;
     modalTitle.textContent = product.name;
     modalDesc.textContent = product.description;
-    modalPrice.textContent = `€${product.price.toFixed(2)}`;
+    modalPrice.textContent = €${product.price.toFixed(2)};
     modalBuyBtn.onclick = () => {
       addToCart(product.id);
       closeModal();
@@ -613,7 +615,7 @@
     let total = 0;
     cart.forEach(item => {
       const li = document.createElement('li');
-      li.textContent = `${item.name} x${item.quantity}`;
+      li.textContent = ${item.name} x${item.quantity};
       const btnRemove = document.createElement('button');
       btnRemove.textContent = '✕';
       btnRemove.style.marginLeft = '10px';
@@ -622,13 +624,13 @@
       btnRemove.style.cursor = 'pointer';
       btnRemove.style.color = '#d4471e';
       btnRemove.style.fontWeight = '900';
-      btnRemove.setAttribute('aria-label', `Remover ${item.name} do carrinho`);
+      btnRemove.setAttribute('aria-label', Remover ${item.name} do carrinho);
       btnRemove.addEventListener('click', () => removeFromCart(item.id));
       li.appendChild(btnRemove);
       cartItemsList.appendChild(li);
       total += item.price * item.quantity;
     });
-    cartTotal.textContent = `Total: €${total.toFixed(2)}`;
+    cartTotal.textContent = Total: €${total.toFixed(2)};
   }
 
   // Inicializa a página
@@ -638,4 +640,3 @@
 
 </body>
 </html>
-
